fix: restore compatibility and null safety